# veel_internship

./: .gitignore  README.md  pyproject.toml
flagged/: log.csv
tests/: gprac.py
utils/: check_ollama_model.py  streamming.py
veel_internship/: main.py
veel_internship/configs/: config.py  logging_config.py
veel_internship/models/: ollama_model.py
veel_internship/prompts/: prompt_templates.py  user_message.py
veel_internship/schemas/: pydantic_schema.py
