[project]
name = "veel-internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.95.0",
    "gradio==3.50.2",
    "ollama>=0.3.3",
    "pydantic>=1.10.22",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 138
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "PLE"]
ignore = ["E101", "E402", "E501", "F841", "E731"]
unfixable = ["E101", "E402", "E501", "F841", "E731"]
